@@ -1,0 +1,6 @@
+install(FILES mosquitto_pub.1 mosquitto_sub.1 DESTINATION $(MANDEST)/man1)
+install(FILES libmosquitto.3 DESTINATION $(MANDEST)/man3)
+install(FILES mosquitto.conf.5 DESTINATION $(MANDEST)/man5)
+install(FILES mqtt.7 DESTINATION $(MANDEST)/man7)
+install(FILES mosquitto.8 DESTINATION $(MANDEST)/man8)
+
